Culminating Experiences Pathway (#1597)
* Basic functionality working.  Tests fixed

* Rubocop

* Adds views

* Controllers working

* Added authority ymls for graduate degrees and programs.  These now get used in the dropdowns for culminating experiences' required fields.  Refactored these required fields into their own view components.

* Rubocop and some sorting

* Niftany.  Adds culm exp metadata to work version methods

* Adds culm exp metadata to some of the display parts.

* DOI minting for culm experiences

* Refactor.  Adds new metadata fields to work version report.  Also, adds new metadata fields to openapi.yml, adds new work type, and removes old work types

* Adds new metadata fields to solr search fields in solr config

* Rubocop

* Adds retired work types back in so validations error dont arise.  Remove them from selct options though.  Fixed/added tests for works

* Adds tests for culminating experiences dropdowns

* Adds culminating experiences tests to work deposit pathway tests

* Removed some things; moved some other things around

* Work deposit pathway form tests for GradCulminatingExperiences

* Adds remaining feature tests for grad culminating upload workflow.  Some minor fixups

* Rubocop

* Adds capstone project, masters thesis and dissertation back into datacite mapping

* Ordering changes

* Ordering changes

* Test for doi minting for grad culminating exp

* Some more work deposit pathway tests.  Minting dois for grad culm

* Fixed Report and report tests

* Some refactoring and cleanup.  Also now setting publisher to ScholarSphere on publish

* Adds tests for setting publisher and modifies factories

* Removed some unecessary things

* Fixed some failing tests
