# app/controllers/catalog_controller.rb
@@ -144,6 +144,9 @@ class CatalogController < ApplicationController
     config.add_show_field 'based_near_tesim', label: 'Based Near'
     config.add_show_field 'related_url_tesim', label: 'Related URL'
     config.add_show_field 'source_tesim', label: 'Source'
+    config.add_show_field 'degree_tesim', label: 'Degree'
+    config.add_show_field 'program_tesim', label: 'Program'
+    config.add_show_field 'sub_work_type_tesim', label: 'Sub Work Type'
     config.add_show_field 'version_number_isi', label: 'Version Number'
     config.add_show_field 'version_name_tesim', label: 'Version Name'
     config.add_show_field 'deposited_at_dtsi', label: 'Date Deposited'
