# app/controllers/dashboard/form/publish_controller.rb
@@ -131,6 +131,9 @@ module Dashboard
               based_near: [],
               related_url: [],
               source: [],
+              sub_work_type: [],
+              program: [],
+              degree: [],
               creators_attributes: [
                 :id,
                 :actor_id,
