# app/controllers/dashboard/form/work_version_details_controller.rb
@@ -64,6 +64,9 @@ module Dashboard
               :rights,
               :version_name,
               :published_date,
+              :sub_work_type,
+              :program,
+              :degree,
               keyword: [],
               contributor: [],
               publisher: [],
