# app/controllers/dashboard/work_versions_controller.rb
@@ -148,6 +148,9 @@ module Dashboard
             based_near: [],
             related_url: [],
             source: [],
+            sub_work_type: [],
+            program: [],
+            degree: [],
             creators_attributes: [
               :id,
               :actor_id,
