# app/models/work.rb
@@ -61,7 +61,9 @@ class Work < ApplicationRecord
 
   module Types
     def self.all
-      general.union(scholarly_works).union(data_and_code).freeze
+      general.union(scholarly_works)
+        .union(data_and_code)
+        .union(grad_culminating_experiences).freeze
     end
 
     def self.general
@@ -86,7 +88,6 @@ class Work < ApplicationRecord
         capstone_project
         conference_proceeding
         dissertation
-        masters_culminating_experience
         masters_thesis
         part_of_book
         report
@@ -102,6 +103,13 @@ class Work < ApplicationRecord
       ].freeze
     end
 
+    def self.grad_culminating_experiences
+      %w[
+        masters_culminating_experience
+        professional_doctoral_culminating_experience
+      ].freeze
+    end
+
     def self.default
       'dataset'
     end
@@ -114,12 +122,22 @@ class Work < ApplicationRecord
       'unspecified'
     end
 
+    # TODO: Once these have been totally cleaned from the db,
+    # we'll no longer need to define them here.
+    def self.retired
+      %w{
+        capstone_project
+        dissertation
+        masters_thesis
+      }
+    end
+
     def self.display(type)
       type.humanize.titleize
     end
 
     def self.options_for_select_box
-      (all - [unspecified, thesis])
+      (all - [unspecified, thesis, retired].flatten)
         .sort
         .map { |type| [display(type), type] }
     end
