# openapi.yml
@@ -263,20 +263,18 @@ components:
             - article
             - audio
             - book
-            - capstone_project
             - collection
             - conference_proceeding
             - dataset
-            - dissertation
             - image
             - journal
             - map_or_cartographic_material
             - masters_culminating_experience
-            - masters_thesis
             - other
             - part_of_book
             - poster
             - presentation
+            - professional_doctoral_culminating_experience
             - project
             - report
             - research_paper
@@ -338,6 +336,32 @@ components:
           type: "array"
           items:
             type: "string"
+        sub_work_type:
+          type: "string"
+          enum:
+            - Capstone Course Work Product
+            - Capstone Project
+            - Culminating Research Project
+            - Doctor of Nursing Practice Project
+            - Integrative Doctoral Research Project
+            - Praxis Project
+            - Public Performance
+            - Scholarly Paper/Essay (MA/MS)
+          example: "Capstone Project"
+        program:
+          type: "string"
+          example: "Acoustics"
+        degree:
+          type: "string"
+          enum:
+            - Doctor of Education
+            - Doctor of Musical Arts
+            - Doctor of Nursing Practice
+            - Doctor of Public Health
+            - Doctor of Philosophy
+            - Master of Arts
+            - Master of Science
+          example: "Master of Science"
         source:
           type: "array"
           items:
